# semantic_merge

./: .gitignore  README.md  architecture.md  implementation.md  pyproject.toml  requirements.md  runbook.md
scripts/: semmerge-driver.py
semmerge/: __init__.py  __main__.py  applier.py  compose.py  config.py  conflict.py  crdt.py  emitter.py  git_api.py  loggingx.py  notes.py  ops.py  verify.py
semmerge/lang/: __init__.py
semmerge/lang/cs/: bridge.py
semmerge/lang/java/: bridge.py
semmerge/lang/ts/: __init__.py  bridge.py  protocol.py
tests/: e2e_basic.sh  e2e_rename_move_decl.sh  test_cli.py  test_compose.py
workers/ts/: package-lock.json  package.json  tsconfig.json
workers/ts/src/: diff.ts  emit.ts  index.ts  lift.ts  protocol.ts  sast.ts
